[package]
name = "rtmpserver"
authors = ["Ludovic Bouguerra <ludovic.bouguerra@stream.studio>"]
repository = "https://github.com/stream-studio/gstreamer-stream-studio-plugins-rs"
description = "RTMP Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
anyhow = "1"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"

[dev-dependencies]
gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }


[lib]
name = "gstrtmpserver"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
static = []
capi = []
doc = []

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
